cloudformation/template.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: ECS Django Multi App Stack 

#################################
# PARAMETERS
#################################

Parameters:

  VPCId:
    Type: AWS::EC2::VPC::Id
    Description: Select your VPC

  Subnet1:
    Type: AWS::EC2::Subnet::Id
    Description: Select Subnet 1

  Subnet2:
    Type: AWS::EC2::Subnet::Id
    Description: Select Subnet 2

  Subnet3:
    Type: AWS::EC2::Subnet::Id
    Description: Select Subnet 3


#################################
# RESOURCES
#################################

Resources:

#################################
# ECS Cluster
#################################

  ECSCluster:
    Type: AWS::ECS::Cluster
    Properties:
      ClusterName: django-multiapp-cluster


#################################
# Security Groups
#################################

  ALBSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: ALB Security Group
      VpcId: !Ref VPCId

      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0

      SecurityGroupEgress:
        - IpProtocol: -1
          CidrIp: 0.0.0.0/0


  ECSSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: ECS Security Group
      VpcId: !Ref VPCId

      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 8000
          ToPort: 8000
          SourceSecurityGroupId: !Ref ALBSecurityGroup

      SecurityGroupEgress:
        - IpProtocol: -1
          CidrIp: 0.0.0.0/0


#################################
# Load Balancer
#################################

  ApplicationLoadBalancer:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      Name: django-alb-automate
      Scheme: internet-facing
      Type: application
      SecurityGroups:
        - !Ref ALBSecurityGroup
      Subnets:
        - !Ref Subnet1
        - !Ref Subnet2
        - !Ref Subnet3


#################################
# Target Groups
#################################

  App1TargetGroup:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      Name: app1-tg-automate
      Port: 8000
      Protocol: HTTP
      TargetType: ip
      VpcId: !Ref VPCId
      HealthCheckPath: /
      HealthCheckProtocol: HTTP


  App2TargetGroup:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      Name: app2-tg-automate
      Port: 8000
      Protocol: HTTP
      TargetType: ip
      VpcId: !Ref VPCId
      HealthCheckPath: /app1/
      HealthCheckProtocol: HTTP


  App3TargetGroup:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      Name: app3-tg-automate
      Port: 8000
      Protocol: HTTP
      TargetType: ip
      VpcId: !Ref VPCId
      HealthCheckPath: /app2/
      HealthCheckProtocol: HTTP


#################################
# Listener
#################################

  Listener:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      LoadBalancerArn: !Ref ApplicationLoadBalancer
      Port: 80
      Protocol: HTTP
      DefaultActions:
        - Type: forward
          TargetGroupArn: !Ref App1TargetGroup


#################################
# Listener Rules
#################################

  App2Rule:
    Type: AWS::ElasticLoadBalancingV2::ListenerRule
    DependsOn: Listener
    Properties:
      ListenerArn: !Ref Listener
      Priority: 10
      Conditions:
        - Field: path-pattern
          PathPatternConfig:
            Values:
              - /app1*
      Actions:
        - Type: forward
          TargetGroupArn: !Ref App2TargetGroup


  App3Rule:
    Type: AWS::ElasticLoadBalancingV2::ListenerRule
    DependsOn: Listener
    Properties:
      ListenerArn: !Ref Listener
      Priority: 20
      Conditions:
        - Field: path-pattern
          PathPatternConfig:
            Values:
              - /app2*
      Actions:
        - Type: forward
          TargetGroupArn: !Ref App3TargetGroup


#################################
# Task Definitions
#################################

  App1TaskDefinition:
    Type: AWS::ECS::TaskDefinition
    Properties:
      Family: app1_task
      NetworkMode: awsvpc
      RequiresCompatibilities:
        - FARGATE
      Cpu: 256
      Memory: 512
      ExecutionRoleArn: arn:aws:iam::000087383875:role/ecsTaskExecutionRole
      ContainerDefinitions:
        - Name: app1
          Image: 000087383875.dkr.ecr.us-east-1.amazonaws.com/app1:latest
          PortMappings:
            - ContainerPort: 8000


  App2TaskDefinition:
    Type: AWS::ECS::TaskDefinition
    Properties:
      Family: app2_task
      NetworkMode: awsvpc
      RequiresCompatibilities:
        - FARGATE
      Cpu: 256
      Memory: 512
      ExecutionRoleArn: arn:aws:iam::000087383875:role/ecsTaskExecutionRole
      ContainerDefinitions:
        - Name: app2
          Image: 000087383875.dkr.ecr.us-east-1.amazonaws.com/app2:latest
          PortMappings:
            - ContainerPort: 8000


  App3TaskDefinition:
    Type: AWS::ECS::TaskDefinition
    Properties:
      Family: app3_task
      NetworkMode: awsvpc
      RequiresCompatibilities:
        - FARGATE
      Cpu: 256
      Memory: 512
      ExecutionRoleArn: arn:aws:iam::000087383875:role/ecsTaskExecutionRole
      ContainerDefinitions:
        - Name: app3
          Image: 000087383875.dkr.ecr.us-east-1.amazonaws.com/app3:latest
          PortMappings:
            - ContainerPort: 8000


#################################
# ECS Services
#################################

  App1Service:
    Type: AWS::ECS::Service
    DependsOn: Listener
    Properties:
      ServiceName: app1-service
      Cluster: !Ref ECSCluster
      TaskDefinition: !Ref App1TaskDefinition
      LaunchType: FARGATE
      DesiredCount: 1

      NetworkConfiguration:
        AwsvpcConfiguration:
          AssignPublicIp: ENABLED
          Subnets:
            - !Ref Subnet1
            - !Ref Subnet2
            - !Ref Subnet3
          SecurityGroups:
            - !Ref ECSSecurityGroup

      LoadBalancers:
        - ContainerName: app1
          ContainerPort: 8000
          TargetGroupArn: !Ref App1TargetGroup


  App2Service:
    Type: AWS::ECS::Service
    DependsOn: Listener
    Properties:
      ServiceName: app2-service
      Cluster: !Ref ECSCluster
      TaskDefinition: !Ref App2TaskDefinition
      LaunchType: FARGATE
      DesiredCount: 1

      NetworkConfiguration:
        AwsvpcConfiguration:
          AssignPublicIp: ENABLED
          Subnets:
            - !Ref Subnet1
            - !Ref Subnet2
            - !Ref Subnet3
          SecurityGroups:
            - !Ref ECSSecurityGroup

      LoadBalancers:
        - ContainerName: app2
          ContainerPort: 8000
          TargetGroupArn: !Ref App2TargetGroup


  App3Service:
    Type: AWS::ECS::Service
    DependsOn: Listener
    Properties:
      ServiceName: app3-service
      Cluster: !Ref ECSCluster
      TaskDefinition: !Ref App3TaskDefinition
      LaunchType: FARGATE
      DesiredCount: 1

      NetworkConfiguration:
        AwsvpcConfiguration:
          AssignPublicIp: ENABLED
          Subnets:
            - !Ref Subnet1
            - !Ref Subnet2
            - !Ref Subnet3
          SecurityGroups:
            - !Ref ECSSecurityGroup

      LoadBalancers:
        - ContainerName: app3
          ContainerPort: 8000
          TargetGroupArn: !Ref App3TargetGroup


#################################
# Outputs
#################################

Outputs:

  LoadBalancerDNS:
    Description: DNS of Application Load Balancer
    Value: !GetAtt ApplicationLoadBalancer.DNSName
